# Eubiota

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
assets/docs/: api_key.md  benchmark.md  customization.md  data_prepare.md  documentation.md  llm_engines.md  logs.md  overview.md  serve_vllm_local.md  train_config.md
data/: BIOMEDICAL_DATA_README.md  create_all_dbs.sh  download_genotype_data.sh  download_kegg_disease_database.sh  download_kegg_drug_database.sh  download_kegg_gene_database.sh  download_kegg_organism_database.sh  download_mdipid_disease_database.sh  download_mdipid_gene_database.sh  download_mdipid_microbiota_database.sh  make_train_data.py
data/micro_phenotypes/: df_delta_quantile_transformed_fixed_params_data_v3_05.23.csv
scientist/: .env.template  __init__.py  solver_scientist.py
scientist/base_agent/: __init__.py  agent.py  executor.py  formatters.py  generator.py  initializer.py  memory.py  planner.py  prompt_loader.py  streaming_agent.py  verifier.py
scientist/base_agent/prompts/: executor.yaml  generator.yaml  planner.yaml  verifier.yaml
scientist/engine/: anthropic.py  azure.py  dashscope.py  deepseek.py  factory.py  gemini.py  litellm.py  ollama.py  openai.py  together.py  vllm.py  xai.py
scientist/scripts/: test_llm_engine.py  test_vllm.py
scientist/tools/: __init__.py  base_rag.py  base_tool.py  test_tools.py  utilis.py
scientist/tools/base_generator/: __init__.py  tool.py
scientist/tools/google_search/: __init__.py  tool.py
scientist/tools/kegg_disease_search/: __init__.py  tool.py
scientist/tools/kegg_drug_search/: __init__.py  tool.py
scientist/tools/kegg_gene_search/: __init__.py  tool.py
scientist/tools/kegg_organism_search/: __init__.py  tool.py
scientist/tools/mdipid_disease_search/: __init__.py  tool.py
scientist/tools/mdipid_gene_search/: __init__.py  tool.py
scientist/tools/mdipid_microbe_search/: __init__.py  tool.py
scientist/tools/perplexity_search/: __init__.py  tool.py
scientist/tools/pubmed_search/: __init__.py  tool.py
scientist/utils/: embedding_store.py  logger.py  tool.py  utils.py
tests/: README.md  calculate_score_unified.py  solve.py  utils.py
tests/Drug-Microbiome_Impact/: run.sh
tests/MB-Protein_Molecular_Mechanism/: run.sh
tests/Protein_Functional_Comprehension/: run.sh
tests/Protein_Genotype_Phenotype_Mapping/: run.sh
tests/exp/: serve_vllm.sh
tests/medmcqa/: run.sh
tests/wmdp-bio/: run.sh
trainer/: .gitignore  __init__.py  pyproject.toml  requirements.txt  runner.py
trainer/cli/: agentops_server.py  vllm.py
trainer/instrumentation/: __init__.py
trainer/tracer/: agentops.py  base.py  triplet.py
trainer/train_scientist/: config.yaml  rollout_dev.py  rollout_scientist.py  serve_with_logs.sh  train_agent.py  train_with_logs.sh  utils.py
trainer/verl/: async_server.py  config.yaml  daemon.py  entrypoint.py  trainer.py
util/: model_merger.py  restart_ray.sh
(+12 files in other folders)
